--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,17 @@
-// Начните писать стили здесь
+@import "./global/fonts.scss";
+@import "./vendor/variables.scss";
+@import "./global/utils.scss";
+@import "./blocks/button";
+@import "./blocks/categories.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/features.scss";
+@import "./blocks/header-nav.scss";
+@import "./blocks/header.scss";
+@import "./blocks/page-footer.scss";
+@import "./blocks/rewiews.scss";
+@import "./blocks/stock.scss";
+@import "./blocks/user-list.scss";
+@import "./global/reboot.scss";
+@import "./blocks/categories__container.scss";
+@import "./blocks/container";
+
