--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -9,3 +9,5 @@ $color-downy-mod: #62d1ba;
 $color-downy-alter: #59d5bc;
 $color-ruerto-rico: #56c3b2;
 $color-ruerto-rico-mod: #46c1ae;
+$color-silver: #c6c6c6;
+$solor-dark-green: rgba(0, 1, 1, 0.25);
