--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,17 +1,20 @@
+@import "./global/variables.scss";
+@import "./global/reboot.scss";
 @import "./global/fonts.scss";
-@import "./vendor/variables.scss";
 @import "./global/utils.scss";
 @import "./blocks/button";
+@import "./blocks/container";
 @import "./blocks/categories.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/features.scss";
-@import "./blocks/header-nav.scss";
 @import "./blocks/header.scss";
 @import "./blocks/page-footer.scss";
 @import "./blocks/rewiews.scss";
 @import "./blocks/stock.scss";
 @import "./blocks/user-list.scss";
-@import "./global/reboot.scss";
-@import "./blocks/categories__container.scss";
-@import "./blocks/container";
-
+@import "./blocks/modal.scss";
+@import "./blocks/intro.scss";
+@import "./blocks/knitting.scss";
+@import "./blocks/form.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/manufacturing.scss";
