--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -10,4 +10,8 @@ $color-downy-alter: #59d5bc;
 $color-ruerto-rico: #56c3b2;
 $color-ruerto-rico-mod: #46c1ae;
 $color-silver: #c6c6c6;
+$color-snow: #f9f9f9;
 $solor-dark-green: rgba(0, 1, 1, 0.25);
+
+$tablet-width: 768px;
+$desktop-width: 1150px;
