--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,3 +1,11 @@
+.contacts {
+  @media (min-width: $desktop-width) {
+    position: relative;
+
+    margin-bottom: 105px;
+  }
+}
+
 .contacts__title {
   margin: 0;
 
@@ -5,6 +13,18 @@
   font-weight: 700;
   font-size: 25px;
   line-height: 30px;
+
+  @media (min-width: $tablet-width) {
+    margin: 150px 0 49px 0;
+
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 53px;
+    line-height: 57px;
+  }
 }
 
 .contacts__email,
@@ -17,6 +37,10 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 30px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 17px;
+  }
 }
 
 .contacts__email,
@@ -45,9 +69,40 @@
   width: 320px;
   margin: 0 auto;
   margin-bottom: 42px;
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    top: -50px;
+    right: 100px;
+  }
 }
 
 .contacts__button {
   margin: 0 auto;
   margin-bottom: 55px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 17px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
+    margin-left: 350px;
+  }
+}
+
+.contacts__wrapper {
+  @media (min-width: $tablet-width) {
+    display: flex;
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-direction: column;
+  }
+}
+
+.contacts__inner {
+  @media (min-width: $desktop-width) {
+    margin-left: 20%;
+  }
 }
