--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,5 +1,9 @@
 .container {
-  max-width: 320px;
-  margin: 0 auto;
-  padding: 0 30px;
+  width: 100%;
+  margin: 0 30px;
+  padding: 0;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 50px;
+  }
 }
