--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -5,6 +5,16 @@
   font-weight: 700;
   font-size: 25px;
   line-height: 30px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 53px;
+    line-height: 57px;
+  }
 }
 
 .features__list {
@@ -12,6 +22,12 @@
   padding: 0;
 
   list-style: none;
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .features__item {
@@ -23,5 +39,42 @@
   line-height: 20px;
   &:last-child {
     margin-bottom: 58px;
+  }
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 22px;
+
+    &--ecology {
+      order: 1;
+    }
+
+    &--prise {
+      order: 3;
+    }
+
+    &--like {
+      order: 5;
+    }
+
+    &--natural {
+      order: 2;
+    }
+
+    &--support {
+      order: 4;
+    }
+
+    &--package {
+      order: 6;
+    }
+  }
+}
+
+
+.featutes__container {
+  @media (min-width: $desktop-width) {
+    width: 60%;
+    margin-left: 30%;
   }
 }
