--- a/source/sass/blocks/knitting.scss
+++ b/source/sass/blocks/knitting.scss
@@ -1,7 +1,38 @@
+.knitting {
+  width: 100%;
+}
+
 .knitting__description {
   font-style: normal;
   font-weight: 400;
   font-size: 13px;
   line-height: 24px;
   color: $color-charcoal;
+
+  @media (min-width: $tablet-width) {
+    font-size: 17px;
+    line-height: 30px;
+  }
+}
+
+.kniting__form-wrapper {
+  margin: 0 30px;
+  padding: 0;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 50px;
+  }
+}
+
+.knitting__description {
+  margin: 0 30px;
+  padding: 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 54px 50px 70px 50px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 98px 223px 70px 225px;
+  }
 }
