--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,8 +1,21 @@
 .page-footer {
-  width: 320px;
+  width: 100%;
   margin: 0 auto;
 
   background-color: $color-white-smoke;
+}
+
+
+.page-footer__inner {
+  @media (min-width: $tablet-width) {
+    display: grid;
+    align-items: center;
+    margin: 51px 50px 58px 50px;
+    margin-top: auto;
+    padding: 50px 0;
+
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 .page-footer__developed-text {
@@ -15,19 +28,28 @@
 .page-footer__social {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
-  margin: 0;
-  margin-bottom: 29px;
+  width: 260px;
+  margin: 0 auto;
   padding: 25px 60px 25px 60px;
 
   list-style: none;
 
   border-bottom: 1px solid $color-whisper-mod;
+
+  @media (min-width: $tablet-width) {
+    border: none;
+  }
 }
 
 .page-footer__developed {
-  display: block;
-  padding: 0 103px 0 49px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 230px;
+  margin: 0 auto;
 
   color: $color-default-black;
   text-decoration: none;
@@ -35,4 +57,13 @@
 
 .page-footer__developed-text {
   display: block;
+  margin-right: 27px;
+}
+
+.page-footer__logo {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+  }
 }
