--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -1,5 +1,14 @@
 .stock {
+  margin: 0 30px;
+
   background-color: $color-default-white;
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+
+    max-width: 100%;
+    margin: 0 50px;
+  }
 }
 
 .stock__title {
@@ -9,15 +18,36 @@
   font-weight: 700;
   font-size: 25px;
   line-height: 30px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  @media (min-width: $desktop-width) {
+    z-index: 1;
+
+    order: 2;
+    padding-left: 210px;
+
+    font-size: 53px;
+    line-height: 57px;
+  }
 }
 
 .stock__product {
+  max-width: 100px;
+
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
   line-height: 20px;
   color: $color-downy;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    line-height: 17px;
+  }
 }
 
 .stock__description {
@@ -26,6 +56,11 @@
   font-size: 15px;
   line-height: 24px;
   color: $color-charcoal;
+
+  @media (min-width: $tablet-width) {
+    font-size: 17px;
+    line-height: 30px;
+  }
 }
 
 .stock__table {
@@ -60,11 +95,18 @@
 
 .stock__image {
   margin-bottom: 25px;
+
+  @media (min-width: $tablet-width) {
+    position: absolute;
+    top: 50px;
+    left: 60%;
+  }
 }
 
 
 .stock__procuct-price {
   display: block;
+  width: 260px;
   margin-bottom: 25px;
 
   font-style: normal;
@@ -72,8 +114,46 @@
   font-size: 17px;
   line-height: 24px;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+  }
 }
 
 .stock__product-order {
   margin-bottom: 73px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 17px;
+  }
+}
+
+.stock__container {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+  }
+}
+
+.stock__container--table {
+  @media (min-width: $tablet-width) {
+    width: 50%;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 25%;
+    margin-left: 30%;
+  }
+}
+
+.stock__container-price {
+  @media (min-width: $tablet-width) {
+    width: 50%;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 25%;
+    margin-left: 30%;
+  }
 }
