--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -4,8 +4,8 @@
   font-family: "Open Sans";
 
   font-display: swap;
-  src: url("../../fonts/opensans.woff") format("woff");
-  src: url("../../fonts/opensans.woff2") format("woff2");
+  src: url("../fonts/opensans.woff") format("woff");
+  src: url("../fonts/opensans.woff2") format("woff2");
 }
 
 @font-face {
@@ -14,6 +14,6 @@
   font-family: "Open Sans";
 
   font-display: swap;
-  src: url("../../fonts/opensansbold.woff") format("woff");
-  src: url("../../fonts/opensansbold.woff2") format("woff2");
+  src: url("../fonts/opensansbold.woff") format("woff");
+  src: url("../fonts/opensansbold.woff2") format("woff2");
 }
