--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,6 +2,8 @@
   @media (min-width: $desktop-width) {
     position: relative;
 
+    max-width: 1150px;
+    margin: 0 auto;
     margin-bottom: 105px;
   }
 }
@@ -94,15 +96,29 @@
 .contacts__wrapper {
   @media (min-width: $tablet-width) {
     display: flex;
+    flex-wrap: wrap;
+
+    gap: 25px;
   }
 
   @media (min-width: $desktop-width) {
     flex-direction: column;
+    max-width: 300px;
   }
 }
 
 .contacts__inner {
+  @media (min-width: $mobile-width) {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: $tablet-width) {
+    max-width: 990px;
+    margin: 0 auto;
+  }
+
   @media (min-width: $desktop-width) {
-    margin-left: 20%;
+    padding: 0 50px 0 175px;
   }
 }
