--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -23,8 +23,16 @@
 
   list-style: none;
 
+  @media (min-width: $mobile-width) {
+    min-width: 260px;
+    max-width: 260px;
+    margin: 0 auto;
+  }
+
   @media (min-width: $tablet-width) {
     display: grid;
+    max-width: 700px;
+    margin: 0 auto;
 
     grid-template-columns: 1fr 1fr;
   }
@@ -37,6 +45,7 @@
   font-weight: 700;
   font-size: 17px;
   line-height: 20px;
+
   &:last-child {
     margin-bottom: 58px;
   }
@@ -74,7 +83,7 @@
 
 .featutes__container {
   @media (min-width: $desktop-width) {
-    width: 60%;
-    margin-left: 30%;
+    max-width: 700px;
+    margin: 0 auto;
   }
 }
