--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -5,71 +5,33 @@
 }
 
 .form-group {
+  margin: 0;
+  padding: 0;
+
   border: none;
-}
 
-.form-group--grey {
-  @media (min-width: $tablet-width) {
-    &::before {
-      content: "";
-      position: absolute;
-      top: 80px;
-      left: -100vw;
-      z-index: -1;
-
-      width: 200vw;
-      height: 20%;
-
-      background-color: $color-snow;
-    }
-  }
-
-  @media (min-width: $desktop-width) {
-    &::before {
-      content: "";
-      position: absolute;
-      top: 80px;
-      left: -100vw;
-      z-index: -1;
-
-      width: 200vw;
-      height: 13%;
-
-      background-color: $color-snow;
-    }
-  }
-}
-
-.form-group--contacts {
   @media (min-width: $tablet-width) {
     margin-bottom: 100px;
-
-    &::before {
-      content: "";
-      position: absolute;
-      bottom: 295px;
-      left: -100vw;
-      z-index: -1;
-
-      width: 200vw;
-      height: 20%;
-
-      background-color: $color-snow;
-    }
   }
 }
 
 .form-group__title {
-  width: 170px;
+  width: 90px;
 
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
   line-height: 16px;
   color: $color-downy;
+  text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
     float: left;
+    margin-right: 80px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 50px;
   }
 }
 
@@ -82,8 +44,36 @@
   line-height: 18px;
 
   @media (min-width: $tablet-width) {
+    margin: 0;
+    padding: 0;
+
     font-size: 19px;
     line-height: 18px;
+  }
+
+  &--checkbox {
+    padding-left: 48px;
+
+    @media (min-width: $tablet-width) {
+      padding-left: 144px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding-left: 70px;
+    }
+  }
+
+  &--radio {
+    display: flex;
+    padding: 14px 20px 10px 48px;
+
+    @media (min-width: $tablet-width) {
+      padding-left: 144px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding-left: 70px;
+    }
   }
 }
 
@@ -92,6 +82,10 @@
   padding: 0;
 
   list-style: none;
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+  }
 }
 
 .form__list--has-wrapper {
@@ -101,12 +95,14 @@
     grid-template-columns: 1fr 1fr;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
 .form-group__input {
+  margin: 0;
+
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -114,9 +110,11 @@
   font-family: inherit;
 
   border: none;
+
   &--radio {
     margin-bottom: 24px;
   }
+
   &--checkbox {
     margin-bottom: 43px;
   }
@@ -145,13 +143,11 @@
 
 .form-group__title--additionally {
   margin-bottom: 23px;
-
-  @media (min-width: $tablet-width) {
-    width: 218px;
-  }
 }
 
 .form-group__textarea {
+  min-width: 260px;
+  max-width: 260px;
   margin-bottom: 17px;
   padding: 15px 15px 26px;
 
@@ -164,8 +160,14 @@
   border: 2px solid  $color-charcoal;
 
   @media (min-width: $tablet-width) {
+    max-width: 501px;
+
     font-size: 18px;
     line-height: 19px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 700px;
   }
 }
 
@@ -174,6 +176,7 @@
   padding: 15px 0;
 
   border-bottom: 2px solid $color-default-black;
+  opacity: 0.3;
 
   @media (min-width: $tablet-width) {
     padding-left: 15px;
@@ -188,18 +191,27 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
+  color: $color-charcoal;
+
   @media (min-width: $tablet-width) {
     order: 2;
+
+    font-size: 17px;
+    line-height: 30px;
   }
 }
 
-.form__submit {
+.form__submit-button {
   margin-bottom: 55px;
 
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
   line-height: 16px;
+
+  @media (min-width: $tablet-width) {
+    max-width: 230px;
+  }
 }
 
 .form__list--about {
@@ -209,10 +221,30 @@
 }
 
 .form__item--about {
+  margin-bottom: 22px;
+
   @media (min-width: $tablet-width) {
     display: flex;
     align-items: center;
+    max-width: 501px;
     margin-bottom: 41px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 700px;
+  }
+}
+
+.form__item--checkbox,
+.form__item--about {
+  margin-bottom: 23px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 60px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -223,26 +255,56 @@
 }
 
 .form-group__input--contacts {
-  @media (min-width: $tablet-width) {
-    width: 100%;
-    padding: 15px 0;
+  width: 100%;
+  padding: 15px 0;
 
-    background-color: $color-snow;
-    border-bottom: 2px solid #000000;
+  border-bottom: 2px solid $color-default-black;
+  opacity: 0.3;
+
+  @media (min-width: $tablet-width) {
+    max-width: 501px;
+
+    background-color: $color-white-smoke;
+  }
+
+  @media (min-width: $tablet-width) {
+    max-width: 700px;
+  }
+}
+
+.form-group--grey {
+  @media (min-width: $tablet-width) {
+    padding-top: 65px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 50px;
   }
 }
 
 .form-group__container {
+  margin-bottom: 22px;
+
+
   @media (min-width: $tablet-width) {
     display: grid;
+    align-items: center;
+    margin-bottom: 0;
+    padding: 60px 0 24px;
 
     grid-template-columns: auto 1fr;
+
+    &:last-child {
+      padding-top: 0;
+      padding-bottom: 50px;
+    }
   }
 }
 
 .form-group--more {
   @media (min-width: $tablet-width) {
     display: flex;
+    margin-bottom: 53px;
   }
 }
 
@@ -253,9 +315,51 @@
   }
 }
 
-.form__container {
+.form__submit {
+  max-width: 320px;
+  margin: 0 auto;
+  padding: 0 30px;
+
   @media (min-width: $tablet-width) {
     display: flex;
-    justify-content: space-around;
+    align-items: baseline;
+    max-width: 768px;
+    padding: 0 50px;
+
+    column-gap: 110px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    align-items: baseline;
+    max-width: 710px;
+    padding: 0 5px;
+  }
+}
+
+
+.form__container {
+  max-width: 320px;
+  margin: 0 auto;
+  padding: 0 30px;
+
+  @media (min-width: $mobile-width) {
+    max-width: 320px;
+  }
+
+  @media (min-width: $tablet-width) {
+    max-width: 768px;
+    padding: 0 50px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 1150px;
+    padding: 0 97px;
+  }
+}
+
+.form__container--color {
+  @media (min-width: $tablet-width) {
+    background-color: $color-white-smoke;
   }
 }
