--- a/source/sass/blocks/knitting.scss
+++ b/source/sass/blocks/knitting.scss
@@ -8,31 +8,29 @@
   font-size: 13px;
   line-height: 24px;
   color: $color-charcoal;
+  margin: 0 auto;
+  margin-bottom: 35px;
+  padding: 0 30px;
+
+  @media (min-width: $mobile-width) {
+    max-width: 500px;
+    padding: 0 30px;
+    margin-bottom: 80px;
+  }
 
   @media (min-width: $tablet-width) {
     font-size: 17px;
     line-height: 30px;
-  }
-}
-
-.kniting__form-wrapper {
-  margin: 0 30px;
-  padding: 0;
-
-  @media (min-width: $tablet-width) {
-    margin: 0 50px;
-  }
-}
-
-.knitting__description {
-  margin: 0 30px;
-  padding: 0;
-
-  @media (min-width: $tablet-width) {
-    padding: 54px 50px 70px 50px;
+    max-width: 668px;
+    padding: 0 50px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 98px 223px 70px 225px;
+    max-width: 735px;
+    padding: 0 15px;
+    margin-bottom: 80px;
+
   }
 }
+
+
