--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,12 +1,22 @@
 .modal {
   position: fixed;
   top: 50%;
+  left: 50%;
 
-  padding-top: 29px;
+  min-width: 320px;
+  max-width: 320px;
+  margin: 0 auto;
+  padding: 30px;
 
   background-color: $color-default-white;
   border: 1px solid $color-silver;
   box-shadow: 0 5px 10px $solor-dark-green;
+  transform: translate(-50%,-50%);
+
+  @media (min-width: $tablet-width) {
+    max-width: 566px;
+    padding: 108px;
+  }
 }
 
 .modal__close {
@@ -14,14 +24,18 @@
 }
 
 .modal__title {
+  text-align: center;
   margin: 0 0 14px 0;
-  padding: 0 50px 0 54px;
 
   font-style: normal;
   font-weight: 700;
   font-size: 25px;
   line-height: 30px;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
 }
 
 .modal__form-group {
@@ -44,6 +58,8 @@
 }
 
 .modal__submit {
+  width: 100%;
+  margin: 0 auto;
   margin-bottom: 46px;
 
   color: $color-default-white;
@@ -51,4 +67,8 @@
   background-color: $color-downy;
   border: none;
   outline: none;
+
+  @media (min-width: $tablet-width) {
+    max-width: 350px;
+  }
 }
