--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -7,14 +7,21 @@
 
 
 .page-footer__inner {
+  max-width: 320px;
+  margin: 0 auto;
+
   @media (min-width: $tablet-width) {
+    max-width: 768px;
     display: grid;
     align-items: center;
-    margin: 51px 50px 58px 50px;
     margin-top: auto;
-    padding: 50px 0;
+    padding: 50px 50px;
 
     grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 1050px;
   }
 }
 
