--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -1,13 +1,20 @@
 .stock {
-  margin: 0 30px;
+  margin: 0 auto;
+  padding: 0 30px;
 
   background-color: $color-default-white;
 
   @media (min-width: $tablet-width) {
     position: relative;
 
-    max-width: 100%;
-    margin: 0 50px;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0 50px;
+  }
+
+  @media (min-width: $tablet-width) {
+    max-width: 1050px;
+    padding: 0 50px;
   }
 }
 
@@ -96,10 +103,16 @@
 .stock__image {
   margin-bottom: 25px;
 
+  @media (min-width: $mobile-width) {
+    min-width: 260px;
+    max-width: 260px;
+    margin: 0 auto;
+  }
+
   @media (min-width: $tablet-width) {
     position: absolute;
     top: 50px;
-    left: 60%;
+    right: 50px;
   }
 }
 
@@ -137,23 +150,35 @@
 }
 
 .stock__container--table {
+  @media (min-width: $mobile-width) {
+    max-width: 400px;
+    margin: 0 auto;
+  }
+
   @media (min-width: $tablet-width) {
     width: 50%;
+    margin: 0;
   }
 
   @media (min-width: $desktop-width) {
-    width: 25%;
-    margin-left: 30%;
+    max-width: 300px;
+    margin-left: 175px;
   }
 }
 
 .stock__container-price {
+  @media (min-width: $mobile-width) {
+    min-width: 260px;
+    max-width: 260px;
+    margin: 0 auto;
+  }
+
   @media (min-width: $tablet-width) {
     width: 50%;
   }
 
   @media (min-width: $desktop-width) {
-    width: 25%;
-    margin-left: 30%;
+    max-width: 300px;
+    margin-left: 175px;
   }
 }
