--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -13,5 +13,6 @@ $color-silver: #c6c6c6;
 $color-snow: #f9f9f9;
 $solor-dark-green: rgba(0, 1, 1, 0.25);
 
+$mobile-width: 321px;
 $tablet-width: 768px;
 $desktop-width: 1150px;
