--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -5,6 +5,7 @@
   font-weight: 700;
   font-size: 25px;
   line-height: 30px;
+  text-align: center;
 
   @media (min-width: $tablet-width) {
     font-size: 43px;
